--- a/1/main.css
+++ b/1/main.css
@@ -1883,8 +1883,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 2px #2ee4bb;
-			color: #2ee4bb !important;
+			box-shadow: inset 0 0 0 2px #893b29;
+			color: #893b29 !important;
 		}
 
 		input[type="submit"]:active,
@@ -1892,9 +1892,9 @@ input, select, textarea {
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: rgba(73, 252, 212, 0.25);
-			box-shadow: inset 0 0 0 2px #2ee4bb;
-			color: #2ee4bb !important;
+			background-color: rgba(198, 71, 37, 0.25);
+			box-shadow: inset 0 0 0 2px #893b29;
+			color: #893b29 !important;
 		}
 
 		input[type="submit"].small,
@@ -2135,7 +2135,7 @@ input, select, textarea {
 		input[type="url"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #2ee4bb;
+			border-color: #893b29;
 		}
 
 	label {
